--- a/src/components/title.css
+++ b/src/components/title.css
@@ -5,7 +5,13 @@
     font-size: 3.5em;
     max-width: 90%;
     margin: 0 auto 1.5em;
-    /* Add margin-top if needed */
+}
+
+.title-heading-box1 {
+    text-align: center;
+    font-size: 3.5em;
+    max-width: 90%;
+    margin: 1em auto 0.5em;
 }
 
 .title-heading {
